// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert renders alert without children 1`] = `
<RenderAlert
  containerStyle={
    Object {
      "backgroundColor": "#e7f3e8",
    }
  }
  icon={
    <Icon
      color="#46B655"
      name="error-outline"
      size={17}
      style={
        Object {
          "transform": Array [
            Object {
              "rotate": "180deg",
            },
          ],
        }
      }
    />
  }
  title={
    <Translation
      passThrough="Alert without children"
    />
  }
  titleStyle={
    Array [
      Object {
        "color": "#065d12",
      },
      undefined,
    ]
  }
/>
`;

exports[`Alert renders danger type 1`] = `
<RenderAlert
  containerStyle={
    Object {
      "backgroundColor": "#fae8e8",
    }
  }
  icon={
    <Icon
      color="#d21c1c"
      name="warning"
      size={17}
    />
  }
  title={
    <Translation
      passThrough="Alert danger"
    />
  }
  titleStyle={
    Array [
      Object {
        "color": "#650808",
      },
      undefined,
    ]
  }
>
  <Translation
    passThrough="Alert body"
  />
</RenderAlert>
`;

exports[`Alert renders success type 1`] = `
<RenderAlert
  containerStyle={
    Object {
      "backgroundColor": "#e7f3e8",
    }
  }
  icon={
    <Icon
      color="#46B655"
      name="error-outline"
      size={17}
      style={
        Object {
          "transform": Array [
            Object {
              "rotate": "180deg",
            },
          ],
        }
      }
    />
  }
  title={
    <Translation
      passThrough="Alert success"
    />
  }
  titleStyle={
    Array [
      Object {
        "color": "#065d12",
      },
      undefined,
    ]
  }
>
  <Translation
    passThrough="Alert body"
  />
</RenderAlert>
`;

exports[`Alert renders warning type 1`] = `
<RenderAlert
  containerStyle={
    Object {
      "backgroundColor": "#fcf1cd",
    }
  }
  icon={
    <Icon
      color="#f9971e"
      name="warning"
      size={17}
    />
  }
  title={
    <Translation
      passThrough="Alert warning"
    />
  }
  titleStyle={
    Array [
      Object {
        "color": "#a93610",
      },
      undefined,
    ]
  }
>
  <Translation
    passThrough="Alert body"
  />
</RenderAlert>
`;
